# govee-mcp

./: Cargo.toml  README.md
docs/: design.md
